# dotfiles

./: .aliases  .bashrc  .gitconfig  .gitconfig.example  .gitignore  .gitmodules  .kdesrc-buildrc  .packages.save  .profile.fish  .tmux.conf  .vimrc  .vimrc.2025  .zprofile  .zshrc  README.md  aliases  apt.sh  arch-setup.sh  fonts.conf  git_tips.md  gitconfig  go-installation.md  init.vim  kdesrc-buildrc  mpd.conf  ncmpcpp.conf  settings.json  sublime-settings  tmux.conf  tmux.md  vim_shortcuts.txt  vimrc
PKGBUILD/kwin/: PKGBUILD  add-jinni-effect.patch
PKGBUILD/vscode-insider/: visual-studio-code-insiders.desktop
alacritty/: alacritty.toml
arch/etc/: sddm.conf
cheatsheets/: ipython_shortcuts.txt  vim_shortcuts.txt
code/: .gitignore  DES.cc  README.md  adaboost.py  aho_corasick.py  appmenu.py  bellman_ford.py  bicubic_resampling.js  bin_coeff.py  binary_space_partition.py  binomial_heap.py  blur_sat.py  boids.js  bounded_queue.js  boyer_moore_horspool.py  c3_linearization.py  cmake-flex-bison.txt  combinations.py  conv_1d.cc  conv_2d.cc  dbus_example.py  dct.py  decorator.py  dft.py  dijkstra.py  dselect.py  elliptic_curve.py  extended_euclidean.py  extended_euclidean.rs  extendible_hashing.py  fenwick_tree.cc  fft.py  fibonacci_heap.py  find_cycle.py  floyd_warshall.py  givens_qr.py  gram_schmidt_process.py  graphviz_graph.py  heapsort.cc  hmac.py  (+65 more)
code/NURBS/: .eslintrc  .vimrc  README.md  package.json  webpack.config.js
code/a-star/: Program.cs  astar.cs
code/bam/: main.cc
code/combinatorial_search/: permutations.py  subsets.py
code/compiler/: CMakeLists.txt
code/compiler/doc/: CMakeLists.txt  Doxyfile.in
code/compiler/examples/: fractals.txt
code/compiler/src/: CMakeLists.txt  main_page.dox
code/compiler/src/codegen/: CMakeLists.txt  Codegen.cc  Codegen.h  CodegenContext.cc  CodegenContext.h  DeclCodegen.cc  DeclCodegen.h  ExprCodegen.cc  ExprCodegen.h  StmtCodegen.cc  StmtCodegen.h  SymbolTable.h
code/compiler/src/frontend/: CMakeLists.txt  CompilerFrontend.cc  CompilerFrontend.h
code/compiler/src/parser/: AST.cc  AST.h  CMakeLists.txt  FileLoader.h  Parser.cc  Parser.h
code/compiler/src/parser/internal/: Parser.y  Scanner.l
code/compiler/src/sema/: CFGPass.cc  CFGPass.h  CMakeLists.txt  Pass.h  Sema.h  TerminatorPass.cc  TerminatorPass.h  TypesPass.cc  TypesPass.h
code/compiler/tools/: CMakeLists.txt
code/compiler/tools/ast-dump/: CMakeLists.txt  main.cc
code/compiler/tools/emit-asm/: CMakeLists.txt  main.cc
code/compiler/tools/emit-elf/: CMakeLists.txt  main.cc
code/compiler/tools/emit-ll/: CMakeLists.txt  main.cc
code/compiler/tools/emit-obj/: CMakeLists.txt  main.cc
code/electron-hello/: index.html  main.js  package.json
code/force_based_graph/: CMakeLists.txt
code/force_based_graph/app/: CMakeLists.txt  app.cc
code/gift_wrapping/: gift_wrapping.py  main.py
code/graham_scan/: graham_scan.py  main.py
code/havok/: rigid_body.cc  vdb.cc
code/hopfield/: main.cc
code/justified_gallery/: README.md  index.html
code/kd-tree/: index.html  kd-tree.js
code/kohonen/: main.cc
code/llvm-clang-examples/: CMakeLists.txt  README.md
code/lua/: lua1.c  lua2.cc  lua2.lua  lua3.cc  lua3.lua  lua4.cc  lua4.lua  lua5.cc  lua5.lua  lua_call_method.cc  lua_call_method.lua  lua_class.cc  lua_class.lua  lua_gettable.cc  lua_gettable.lua  lua_newtable.cc  lua_newtable.lua  lua_settable.cc  lua_settable.lua  lua_template.cc
code/memory_managers/: CMakeLists.txt  LICENSE  README.md  TODO.txt
code/memory_managers/src/: CMakeLists.txt  binary_buddy_memory_allocator.cc  binary_buddy_memory_allocator.h  first_fit_free_list_memory_allocator.cc  first_fit_free_list_memory_allocator.h  lifo_memory_allocator.cc  lifo_memory_allocator.h  memory_allocator.h  memory_manager.cc  memory_manager.h  monitor_memory_allocator.cc  monitor_memory_allocator.h  object.h  pool_memory_allocator.cc  pool_memory_allocator.h  utils.cc  utils.h
code/memory_managers/test/: CMakeLists.txt  binary_buddy_memory_allocator.cc  first_fit_free_list_memory_allocator.cc  lifo_memory_allocator.cc  pool_memory_allocator.cc  roundup.cc  template.cc
code/mpd-utils/: MPD.desktop
code/navbar_lines/: index.html
code/neural_network/: CSVLoader.h  NetData.h  main.cc
code/notebooks/: Expectation-Maximization.ipynb
code/perceptron/: dataset.py  perceptron.py  visualize.py
code/pygtk/: listbox.py  stack_stackswitcher.py
code/quadratic_bezier/: package.json  webpack.config.js
code/quadtree/: index.html
code/rails_stuff/: README.md
code/raytracer.js/: index.html  package.json  webpack.config.js
code/react-bootstrap/: README.md  bower.json  gulpfile.js  package.json
code/recurrent_net/: README.md  recurrent_net.py  vocabulary.pickle
code/segment_image/: kmeans.py  main.py
code/t-SNE/: _utils.pyx  setup.py  t_sne.py
code/vectorized_io/: readv.cc  writev.cc
code/vp-tree/: index.html  (+1 more)
code/wayland-egl/: CMakeLists.txt  README.md
code/wayland-egl/cmake/Modules/: FindEGL.cmake  FindGLES.cmake  FindWayland.cmake  FindWaylandEGL.cmake
code/wayland-egl/include/: surface.h  wayland_app.h  wayland_surface.h
code/wayland-egl/src/: main.cc  wayland_app.cc  wayland_surface.cc
code/wayland-shm/: CMakeLists.txt  app.cc  app.h  colors_surface.h  main.cc  surface.cc  surface.h
code/wayland-shm/cmake/Modules/: FindWayland.cmake
colorschemes/: Tomorrow-Dark.colorscheme
docs/: firefox.md  gpg-terms.md  mouse-lag.md  thunderbird.md
fish/: .gitignore  aliases.fish  config.fish  fish_plugins
konsole/: OneDark.colors  OneLight.colorscheme
kwin/: PKGBUILD  add-slidedesktops-effect.patch  allow-shadows-for-maximized-windows.patch
kwin/effects/jinni/: CMakeLists.txt  PKGBUILD  jinni.cpp  jinni.desktop  jinni.h  timeline.h
mpd-utils/: .gitignore  launch.sh
old/: mpd.conf
sublime/: LSP-clangd.sublime-settings  LSP.sublime-settings  Mariana.sublime-color-scheme  Preferences.sublime-settings
tips/: README.md  delay_video.md
ubuntu/: README.md
vscode/: extensions.list  settings.json
zed/: settings.json
zsh/: .aliases  .zshrc  README.md
(+360 files in other folders)
